--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,10 +33,11 @@ subject: My Email Templates
               </center>
               <p class="bg-blue text-white">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                 ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis
-                nostrud exercitation ullamco laboris consequat.</p>
-              <center>
-                <a href="#" class="button-big">SCEGLI IL TUO iPHONE 7</a>
-              </center>
+                nostrud exercitation ullamco laboris consequat.
+              </p>
+                <center>
+                    <button href="#" class="large radius">SCEGLI IL TUO iPHONE 7</button>
+                </center>
             </columns>
           </row>
           <row>
@@ -56,56 +57,56 @@ subject: My Email Templates
             </columns>
           </row>
           <row>
-            <columns large="6">
-              <div class="bg-light-gray">
-                <center>
-                  <img class="img-product" src="assets/img/iphone7.jpg" alt="">
-                </center>
-                <p>iPhone 7 Plus Jet Black</p>
-                <p>
-                  <span>da 890.90€</span>
-                  <a href="#" class="button-small">ACQUISTA ADESSO</a>
-                </p>
-              </div>
-            </columns>
-            <columns large="6">
-              <div class="bg-light-gray">
-                <center>
-                  <img class="img-product" src="assets/img/iphone7.jpg" alt="">
-                </center>
-                <p>iPhone 7 Plus Jet Black</p>
-                <p>
-                  <span>da 890.90€</span>
-                  <a href="#" class="button-small">ACQUISTA ADESSO</a>
-                </p>
-              </div>
-            </columns>
+              <columns large="6">
+                  <wrapper class="cart-product" bgcolor="#f6f6f6">
+                      <center>
+                          <img class="img-product" src="assets/img/iphone7.jpg" alt="">
+                      </center>
+                      <p>iPhone 7 Plus Jet Black</p>
+                      <p>
+                          <span>da 890.90€</span>
+                          <a href="#" class="button-small">ACQUISTA ADESSO</a>
+                      </p>
+                  </wrapper>
+              </columns>
+              <columns large="6">
+                  <wrapper class="cart-product" bgcolor="#f6f6f6">
+                      <center>
+                          <img class="img-product" src="assets/img/iphone7.jpg" alt="">
+                      </center>
+                      <p>iPhone 7 Plus Jet Black</p>
+                      <p>
+                          <span>da 890.90€</span>
+                          <a href="#" class="button-small">ACQUISTA ADESSO</a>
+                      </p>
+                  </wrapper>
+              </columns>
           </row>
           <row>
             <columns large="6">
-              <div class="bg-light-gray">
-                <center>
-                  <img class="img-product" src="assets/img/iphone7.jpg" alt="">
-                </center>
-                <p>iPhone 7 Plus Jet Black</p>
-                <p>
-                  <span>da 890.90€</span>
-                  <a href="#" class="button-small">ACQUISTA ADESSO</a>
-                </p>
-              </div>
+                <wrapper class="cart-product" bgcolor="#f6f6f6">
+                    <center>
+                        <img class="img-product" src="assets/img/iphone7.jpg" alt="">
+                    </center>
+                    <p>iPhone 7 Plus Jet Black</p>
+                    <p>
+                        <span>da 890.90€</span>
+                        <a href="#" class="button-small">ACQUISTA ADESSO</a>
+                    </p>
+                </wrapper>
             </columns>
-            <columns large="6">
-              <div class="bg-light-gray">
-                <center>
-                  <img class="img-product" src="assets/img/iphone7.jpg" alt="">
-                </center>
-                <p>iPhone 7 Plus Jet Black</p>
-                <p>
-                  <span>da 890.90€</span>
-                  <a href="#" class="button-small">ACQUISTA ADESSO</a>
-                </p>
-              </div>
-            </columns>
+              <columns large="6">
+                  <wrapper class="cart-product" bgcolor="#f6f6f6">
+                      <center>
+                          <img class="img-product" src="assets/img/iphone7.jpg" alt="">
+                      </center>
+                      <p>iPhone 7 Plus Jet Black</p>
+                      <p>
+                          <span>da 890.90€</span>
+                          <a href="#" class="button-small">ACQUISTA ADESSO</a>
+                      </p>
+                  </wrapper>
+              </columns>
           </row>
           <row>
             <columns>
@@ -114,16 +115,23 @@ subject: My Email Templates
                 officia deserunt mollit sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua.
               </p>
-              <a href="#" class="button-big">SCOPRI GLI ALTRI IPHONE 7 RICONDIZIONATI</a>
+                <center>
+                    <button href="#" class="large radius">SCOPRI GLI ALTRI IPHONE 7 RICONDIZIONATI</button>
+                </center>
+
             </columns>
           </row>
           <row>
             <columns>
-              <p>HANNO PARLATO DI NOI</p>
-              <center>
-                <img src="assets/img/logos-company.jpg" alt="">
-              </center>
-              <a href="#">E tanti altri ancora. Scoprili qui >></a>
+              <div class="companies">
+                  <p class="text-blue text-center text-bold">HANNO PARLATO DI NOI</p>
+                  <center>
+                    <img src="assets/img/logos-company.jpg" alt="">
+                  </center>
+                  <p class="text-right">
+                    <a href="#">E tanti altri ancora. Scoprili qui >></a>
+                  </p>
+              </div>
             </columns>
           </row>
           <row class="footer">
