--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,32 +9,27 @@ subject: My Email Templates
       <center>
         <spacer size="10"></spacer>
         <container>
-          <row>
-            <columns class="header">
-              <spacer size="10"></spacer>
-              <img src="assets/img/logo.png" alt="">
-              <p class="text-white">iPhone e iPad Ricondizionati Garantiti 2 anni - N.1 in Italia</p>
-            </columns>
-          </row>
-          <row>
-            <columns>
-              <h1 class="text-blue">LOREM IPSUM DOLOR SIT AMET</h1>
-            </columns>
-          </row>
-          <row>
-            <columns>
-              <p>Sed do eiusmod tempor incididunt ut bore et dolore.</p>
-            </columns>
-          </row>
+          <wrapper class="header" bgcolor="#222525">
+            <img src="assets/img/logo.png" alt="">
+            <p class="text-white">iPhone e iPad Ricondizionati Garantiti 2 anni - N.1 in Italia</p>
+          </wrapper>
+            <wrapper class="h1">
+                <h1 class="text-blue text-bold">LOREM IPSUM DOLOR SIT AMET</h1>
+                <p class="text-center">Sed do eiusmod tempor incididunt ut bore et dolore.</p>
+                <center>
+                    <div class="line"></div>
+                </center>
+            </wrapper>
           <row>
             <columns>
               <center>
                 <img src="assets/img/wellcome-image.jpg" alt="">
               </center>
-              <p class="bg-blue text-white">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis
-                nostrud exercitation ullamco laboris consequat.
-              </p>
+                <wrapper class="text-under-img" bgcolor="#608ac3">
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                    ut aliquip ex ea commodo consequat. <span class="text-bold">Ut enim ad minim veniam,</span> quis
+                    nostrud exercitation ullamco laboris consequat.
+                </wrapper>
                 <center>
                     <button href="#" class="large radius">SCEGLI IL TUO iPHONE 7</button>
                 </center>
