--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -57,9 +57,10 @@ subject: My Email Templates
                       <center>
                           <img class="img-product" src="assets/img/iphone7.jpg" alt="">
                       </center>
+                      <spacer size="10"></spacer>
                       <p>iPhone 7 Plus Jet Black</p>
                       <p>
-                          <span>da 890.90€</span>
+                          <span class="price-product">da 890.90€</span>
                           <a href="#" class="button-small">ACQUISTA ADESSO</a>
                       </p>
                   </wrapper>
@@ -69,9 +70,10 @@ subject: My Email Templates
                       <center>
                           <img class="img-product" src="assets/img/iphone7.jpg" alt="">
                       </center>
+                      <spacer size="10"></spacer>
                       <p>iPhone 7 Plus Jet Black</p>
                       <p>
-                          <span>da 890.90€</span>
+                          <span class="price-product">da 890.90€</span>
                           <a href="#" class="button-small">ACQUISTA ADESSO</a>
                       </p>
                   </wrapper>
@@ -83,9 +85,10 @@ subject: My Email Templates
                     <center>
                         <img class="img-product" src="assets/img/iphone7.jpg" alt="">
                     </center>
+                    <spacer size="10"></spacer>
                     <p>iPhone 7 Plus Jet Black</p>
                     <p>
-                        <span>da 890.90€</span>
+                        <span class="price-product">da 890.90€</span>
                         <a href="#" class="button-small">ACQUISTA ADESSO</a>
                     </p>
                 </wrapper>
@@ -95,9 +98,10 @@ subject: My Email Templates
                       <center>
                           <img class="img-product" src="assets/img/iphone7.jpg" alt="">
                       </center>
+                      <spacer size="10"></spacer>
                       <p>iPhone 7 Plus Jet Black</p>
                       <p>
-                          <span>da 890.90€</span>
+                          <span class="price-product">da 890.90€</span>
                           <a href="#" class="button-small">ACQUISTA ADESSO</a>
                       </p>
                   </wrapper>
