--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -135,23 +135,24 @@ subject: My Email Templates
           </row>
           <row class="footer">
             <columns large="2" valign="middle">
-              <a href="#">SEGUICI:</a>
+                <spacer size="10"></spacer>
+              <span>SEGUICI:</span>
             </columns>
             <columns large="4" class="social-links" valign="middle">
+                <spacer size="10"></spacer>
                 <a href="#"><img src="assets/img/icon-facebook.jpg" alt="facebook"></a>
                 <a href="#"><img src="assets/img/icon-twitter.jpg"  alt="twitter"></a>
                 <a href="#"><img src="assets/img/icon-instagram.jpg" alt="youtube"></a>
             </columns>
             <columns large="6" valign="middle">
-                <p class="text-right"><a href="#" >www.trendevice.com</a></p>
+                <spacer size="10"></spacer>
+                <p class="text-right main-link"><a href="#" >www.trendevice.com</a></p>
 
             </columns>
           </row>
-          <row class="footer">
-            <columns>
-              <p class="text-white text-center">Panta Rei S.r.l., Via Capozzi, 35-37, Avellino 83100, Italy</p>
-            </columns>
-          </row>
+            <wrapper class="bottom-footer" bgcolor="#222525">
+                <p class="text-white text-center">Panta Rei S.r.l., Via Capozzi, 35-37, Avellino 83100, Italy</p>
+            </wrapper>
         </container>
       </center>
     </td>
