--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -134,19 +134,22 @@ subject: My Email Templates
             </columns>
           </row>
           <row class="footer">
-            <columns large="2" valign="middle">
+            <columns large="2" small="4" valign="middle">
                 <spacer size="10"></spacer>
               <span>SEGUICI:</span>
             </columns>
-            <columns large="4" class="social-links" valign="middle">
+            <columns large="4" small="8" class="social-links" valign="middle">
                 <spacer size="10"></spacer>
-                <a href="#"><img src="assets/img/icon-facebook.jpg" alt="facebook"></a>
-                <a href="#"><img src="assets/img/icon-twitter.jpg"  alt="twitter"></a>
-                <a href="#"><img src="assets/img/icon-instagram.jpg" alt="youtube"></a>
+                <p class="list-social-icons">
+                    <a href="#"><img src="assets/img/icon-facebook.jpg" alt="facebook"></a>
+                    <a href="#"><img src="assets/img/icon-twitter.jpg"  alt="twitter"></a>
+                    <a href="#"><img src="assets/img/icon-instagram.jpg" alt="youtube"></a>
+                </p>
+
             </columns>
             <columns large="6" valign="middle">
                 <spacer size="10"></spacer>
-                <p class="text-right main-link"><a href="#" >www.trendevice.com</a></p>
+                <p class="main-link"><a href="#" >www.trendevice.com</a></p>
 
             </columns>
           </row>
