--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,7 +10,7 @@ subject: My Email Templates
         <spacer size="10"></spacer>
         <container>
           <wrapper class="header" bgcolor="#222525">
-            <img src="assets/img/logo.png" alt="">
+            <img src="http://dr0n.cc.ua/img/logo.png" alt="">
             <p class="text-white">iPhone e iPad Ricondizionati Garantiti 2 anni - N.1 in Italia</p>
           </wrapper>
             <wrapper class="h1">
@@ -23,7 +23,7 @@ subject: My Email Templates
           <row>
             <columns>
               <center>
-                <img src="assets/img/wellcome-image.jpg" alt="">
+                <img src="http://dr0n.cc.ua/img/wellcome-image.jpg" alt="">
               </center>
                 <wrapper class="text-under-img" bgcolor="#608ac3">
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -55,7 +55,7 @@ subject: My Email Templates
               <columns large="6">
                   <wrapper class="cart-product" bgcolor="#f6f6f6">
                       <center>
-                          <img class="img-product" src="assets/img/iphone7.jpg" alt="">
+                          <img class="img-product" src="http://dr0n.cc.ua/img/iphone7.jpg" alt="">
                       </center>
                       <spacer size="10"></spacer>
                       <p>iPhone 7 Plus Jet Black</p>
@@ -68,7 +68,7 @@ subject: My Email Templates
               <columns large="6">
                   <wrapper class="cart-product" bgcolor="#f6f6f6">
                       <center>
-                          <img class="img-product" src="assets/img/iphone7.jpg" alt="">
+                          <img class="img-product" src="http://dr0n.cc.ua/img/iphone7.jpg" alt="">
                       </center>
                       <spacer size="10"></spacer>
                       <p>iPhone 7 Plus Jet Black</p>
@@ -83,7 +83,7 @@ subject: My Email Templates
             <columns large="6">
                 <wrapper class="cart-product" bgcolor="#f6f6f6">
                     <center>
-                        <img class="img-product" src="assets/img/iphone7.jpg" alt="">
+                        <img class="img-product" src="http://dr0n.cc.ua/img/iphone7.jpg" alt="">
                     </center>
                     <spacer size="10"></spacer>
                     <p>iPhone 7 Plus Jet Black</p>
@@ -96,7 +96,7 @@ subject: My Email Templates
               <columns large="6">
                   <wrapper class="cart-product" bgcolor="#f6f6f6">
                       <center>
-                          <img class="img-product" src="assets/img/iphone7.jpg" alt="">
+                          <img class="img-product" src="http://dr0n.cc.ua/img/iphone7.jpg" alt="">
                       </center>
                       <spacer size="10"></spacer>
                       <p>iPhone 7 Plus Jet Black</p>
@@ -125,7 +125,7 @@ subject: My Email Templates
               <div class="companies">
                   <p class="text-blue text-center text-bold">HANNO PARLATO DI NOI</p>
                   <center>
-                    <img src="assets/img/logos-company.jpg" alt="">
+                    <img src="http://dr0n.cc.ua/img/logos-company.jpg" alt="">
                   </center>
                   <p class="text-right">
                     <a href="#">E tanti altri ancora. Scoprili qui >></a>
@@ -141,9 +141,9 @@ subject: My Email Templates
             <columns large="4" small="8" class="social-links" valign="middle">
                 <spacer size="10"></spacer>
                 <p class="list-social-icons">
-                    <a href="#"><img src="assets/img/icon-facebook.jpg" alt="facebook"></a>
-                    <a href="#"><img src="assets/img/icon-twitter.jpg"  alt="twitter"></a>
-                    <a href="#"><img src="assets/img/icon-instagram.jpg" alt="youtube"></a>
+                    <a href="#"><img src="http://dr0n.cc.ua/img/icon-facebook.jpg" alt="facebook"></a>
+                    <a href="#"><img src="http://dr0n.cc.ua/img/icon-twitter.jpg"  alt="twitter"></a>
+                    <a href="#"><img src="http://dr0n.cc.ua/img/icon-instagram.jpg" alt="youtube"></a>
                 </p>
 
             </columns>
