--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -134,11 +134,11 @@ subject: My Email Templates
             </columns>
           </row>
           <row class="footer">
-            <columns large="2" small="4" valign="middle">
+            <columns  large="2" small="12" valign="middle">
                 <spacer size="20"></spacer>
-              <span>SEGUICI:</span>
+                <p class="lable-social-links">SEGUICI:</p>
             </columns>
-            <columns large="4" small="8" class="social-links" valign="middle">
+            <columns large="4" small="12" class="social-links" valign="middle">
                 <spacer size="20"></spacer>
                 <p class="list-social-icons">
                     <a href="#"><img src="http://dr0n.cc.ua/img/icon-facebook.jpg" alt="facebook"></a>
